; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_sdhci-omap.c_sdhci_omap_set_clock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_sdhci-omap.c_sdhci_omap_set_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdhci_host = type { i32 }
%struct.sdhci_pltfm_host = type { i32 }
%struct.sdhci_omap_host = type { i32 }

@SYSCTL_CLKD_MASK = common dso_local global i64 0, align 8
@SYSCTL_CLKD_SHIFT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sdhci_host*, i32)* @sdhci_omap_set_clock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdhci_omap_set_clock(%struct.sdhci_host* %0, i32 %1) #0 {
  %3 = alloca %struct.sdhci_host*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sdhci_pltfm_host*, align 8
  %6 = alloca %struct.sdhci_omap_host*, align 8
  %7 = alloca i64, align 8
  store %struct.sdhci_host* %0, %struct.sdhci_host** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.sdhci_host*, %struct.sdhci_host** %3, align 8
  %9 = call %struct.sdhci_pltfm_host* @sdhci_priv(%struct.sdhci_host* %8)
  store %struct.sdhci_pltfm_host* %9, %struct.sdhci_pltfm_host** %5, align 8
  %10 = load %struct.sdhci_pltfm_host*, %struct.sdhci_pltfm_host** %5, align 8
  %11 = call %struct.sdhci_omap_host* @sdhci_pltfm_priv(%struct.sdhci_pltfm_host* %10)
  store %struct.sdhci_omap_host* %11, %struct.sdhci_omap_host** %6, align 8
  %12 = load %struct.sdhci_omap_host*, %struct.sdhci_omap_host** %6, align 8
  %13 = call i32 @sdhci_omap_stop_clock(%struct.sdhci_omap_host* %12)
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %2
  br label %31

17:                                               ; preds = %2
  %18 = load %struct.sdhci_pltfm_host*, %struct.sdhci_pltfm_host** %5, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i64 @sdhci_omap_calc_divisor(%struct.sdhci_pltfm_host* %18, i32 %19)
  store i64 %20, i64* %7, align 8
  %21 = load i64, i64* %7, align 8
  %22 = load i64, i64* @SYSCTL_CLKD_MASK, align 8
  %23 = and i64 %21, %22
  %24 = load i64, i64* @SYSCTL_CLKD_SHIFT, align 8
  %25 = shl i64 %23, %24
  store i64 %25, i64* %7, align 8
  %26 = load %struct.sdhci_host*, %struct.sdhci_host** %3, align 8
  %27 = load i64, i64* %7, align 8
  %28 = call i32 @sdhci_enable_clk(%struct.sdhci_host* %26, i64 %27)
  %29 = load %struct.sdhci_omap_host*, %struct.sdhci_omap_host** %6, align 8
  %30 = call i32 @sdhci_omap_start_clock(%struct.sdhci_omap_host* %29)
  br label %31

31:                                               ; preds = %17, %16
  ret void
}

declare dso_local %struct.sdhci_pltfm_host* @sdhci_priv(%struct.sdhci_host*) #1

declare dso_local %struct.sdhci_omap_host* @sdhci_pltfm_priv(%struct.sdhci_pltfm_host*) #1

declare dso_local i32 @sdhci_omap_stop_clock(%struct.sdhci_omap_host*) #1

declare dso_local i64 @sdhci_omap_calc_divisor(%struct.sdhci_pltfm_host*, i32) #1

declare dso_local i32 @sdhci_enable_clk(%struct.sdhci_host*, i64) #1

declare dso_local i32 @sdhci_omap_start_clock(%struct.sdhci_omap_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
